Minor changes: refactor styling rules in WiseOverviewCard.scss, and fix issue where ReportImageModal appears behind ImageDetailsModal

--- a/frontend/src/WiseOverviewCard.scss
+++ b/frontend/src/WiseOverviewCard.scss
@@ -12,28 +12,20 @@
   & > .ant-card-body {
     padding: 16px;
 
-    .wise-overview {
-      margin-bottom: 0;
+    > .wise-overview > p {
+      line-height: 1.5;
+      font-size: 14px;
+
+      &.wise-example-queries {
+        line-height: 2;
   
-      > p:first-of-type {
-        margin-top: 0;
+        > button {
+          margin: 0 2px;
+        }
       }
-    }
-  }
-}
 
-.wise-overview {
-  margin-bottom: 30px;
-
-  & > p {
-    line-height: 1.5;
-    font-size: 14px;
-
-    &.wise-example-queries {
-      line-height: 2;
-
-      > button {
-        margin: 0 2px;
+      &:first-of-type {
+        margin-top: 0;
       }
     }
   }
